# voicemail

./: .gitignore  README.md
android/: .gitignore  README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/dev/zacharyross/voicemail/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/zacharyross/voicemail/: Constants.kt  MainActivity.kt  VoicemailApp.kt  VoicemailHiltApp.kt
android/app/src/main/java/dev/zacharyross/voicemail/data/: models.kt
android/app/src/main/java/dev/zacharyross/voicemail/data/repository/: AuthRepositoryImpl.kt  ClientRepositoryImpl.kt  NotificationRepositoryImpl.kt  VoicemailRepositoryImpl.kt
android/app/src/main/java/dev/zacharyross/voicemail/data/service/: PlaybackService.kt  PlaybackServiceConnection.kt
android/app/src/main/java/dev/zacharyross/voicemail/di/: AppModule.kt
android/app/src/main/java/dev/zacharyross/voicemail/domain/model/: AuthListener.kt  Request.kt  SignInRequest.kt  VerifyPhoneRequest.kt  Voicemail.kt
android/app/src/main/java/dev/zacharyross/voicemail/domain/repository/: AuthRepository.kt  ClientRepository.kt  NotificationRepository.kt  VoicemailRepository.kt
android/app/src/main/java/dev/zacharyross/voicemail/domain/usecase/: RefreshTokenUseCase.kt  SetAsReadUseCase.kt  SyncDataUseCase.kt  UseCase.kt
android/app/src/main/java/dev/zacharyross/voicemail/service/: MessagingService.kt  PlaybackService.kt  PlaybackServiceConnection.kt
android/app/src/main/java/dev/zacharyross/voicemail/ui/auth/: AuthEvent.kt  AuthNavGraph.kt  AuthTransitions.kt  AuthViewModel.kt  (+1 more)
android/app/src/main/java/dev/zacharyross/voicemail/worker/: DataSourceSyncWorker.kt  TokenRefreshWorker.kt
android/app/src/main/res/drawable/: ic_splash_foreground.xml  ic_voicemail.xml  illustration_complete.xml  illustration_login.xml  illustration_waiting.xml
android/app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/dev/zacharyross/voicemail/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
database/: README.md  dockerfile  pyproject.toml
database/sql/: create_tables.sql
database/voicemail_db/: database.py
protobuf/: voicemail.proto
protos/: transcribe.proto
transcriber-service/: .gitignore  README.md  pyproject.toml
transcriber-service/transcriber/: service.py  transcription.py
transcriber-service/transcriber/vosk_recasepunc/: README.md  recasepunc.py
voicemail-service/: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt
voicemail-service/voicemail/: asr.py  service.py  transcriber.py  voicemail.py
voicemail-service/voicemail/database/: database.py
(+57 files in other folders)
