[tool.poetry]
name = "voicemail_db"
version = "0.1.11"
description = ""
authors = ["Zack Ross <zmr462@usask.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg = {extras = ["binary"], version = "^3.1.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
