[tool.poetry]
name = "transcriber"
version = "0.1.0"
description = ""
authors = ["Zack Ross <zmr462@usask.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mosestokenizer = {git = "https://github.com/benob/mosestokenizer.git"}
numpy = "^1.23.3"
regex = "^2022.9.13"
tqdm = "^4.64.1"
transformers = "^4.22.2"
vosk = "^0.3.44"
torch = {url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp310-cp310-linux_x86_64.whl"}
grpcio = "^1.49.1"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.49.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
