[project]
name = "voicemail"
version = "0.1.3"
description = ""
authors = [{name = "Zack Ross", email = "zmr462@usask.ca"}]
readme = "README.rst"
requires-python = ">=3.10"

dependencies = [
    "signalwire >= 2.0.4",
    "protobuf == 3.20.1",
    "kombu",
    "nemo_toolkit[all]"
]

[project.optional-dependencies]
test = [
    "pytest >= 5.2",
]
build = [
    "grpcio-tools",
]

[project.scripts]
voicemail-service = "voicemail.service:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
