[project]
name = "voicemail"
version = "0.1.5"
description = ""
authors = [{name = "Zack Ross", email = "zmr462@usask.ca"}]
readme = "README.rst"
requires-python = ">=3.10"

dependencies = [
    "signalwire >= 2.0.4",
    "protobuf == 3.20.1",
    "nemo_toolkit[all]",
    "firebase-admin",
    "nanoid",
]

[project.optional-dependencies]
test = [
    "pytest >= 5.2",
]

[project.scripts]
voicemail-service = "voicemail.service:main"
tts = "voicemail.scripts.tts:main"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"
